--- a/html-practice-3/index.html
+++ b/html-practice-3/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Practice 3</title>
+
+    <style>
+        h1 {
+            color: red;
+        }
+    </style>
+    <script>
+        alert('Please click to start the video!');
+    </script>
 </head>
 <body>
+    <h1>My Favorite Youtube Video</h1>
+    <iframe data-title="How To Get Rich" data-name="naval" width="560" height="315" src="https://www.youtube.com/embed/1-TZqOsVCNM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <!-- 
         This practice is less structured! 
         Simply do the following... 
